force-app/main/default/objects/FKD_Legal__c/FKD_Legal__c.object-meta.xml
<CustomObject>
    <label>FKD Legal</label>
    <nameField>
        <label>FKD Legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FKD Legal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>