force-app/main/default/objects/FKD_Legal__c/fields/Application_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_Application_ID__c</fullName>
    <formula>Operation__r.Application__r.Application_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Application ID</label>
    <type>Text</type>
</CustomField>