force-app/main/default/objects/FKD_Legal__c/fields/Application_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Customer_Name__c</fullName>
    <formula>Operation__r.Application__r.Customer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Customer Name</label>
    <type>Text</type>
</CustomField>