force-app/main/default/objects/FKD_Legal__c/fields/Approval_Assigned_L2_A__c.field-meta.xml
<CustomField>
    <fullName>Approval_Assigned_L2_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Assigned L2 A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FKD_Legal1</relationshipName>
    <type>Lookup</type>
</CustomField>