force-app/main/default/objects/FKD_Legal__c/fields/Approval_Result__c.field-meta.xml
<CustomField>
    <fullName>Approval_Result__c</fullName>
    <label>Approval Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>